# writeAgent

./: .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  README.md  docker-compose.yml  plan.md  pyproject.toml  requirements.txt  run_demo.py  setup.py  setup_engine_api.py  start_api_server.py  test_core_workflow.py  test_workflow_restructure.py  validate_system.py
.claude/: CLAUDE.md
.claude/agents/: cutter.md  planner.md  polisher.md  reviewer.md  writer.md
.claude/commands/: continue.md  plan-story.md  polish-chapter.md  review-chapter.md  review-milestone.md  write-chapter.md  write-learn.md
.claude/skills/cutter-skill/: SKILL.md
.claude/skills/planner-skill/: SKILL.md  archive-maintenance.md
.claude/skills/planner-skill/references/: beat-vocabulary.md
.claude/skills/planner-skill/templates/: character-template.md  decision-log-template.md  outline-template.md  plan-template.md  progress-tracker-template.md
.claude/skills/polisher-skill/: SKILL.md
.claude/skills/reviewer-skill/: SKILL.md  quality-standards.md  review-checklist.md
.claude/skills/reviewer-skill/templates/: review-report-template.md
.claude/skills/shared/: deai-rules.md  hook-techniques.md
.claude/skills/writer-skill/:  content-expansion.md  SKILL.md  chapter-guide.md  description-craft.md  dialogue-writing.md
.claude/skills/writer-skill/templates/: chapter-template.md
chroma_data/802eda6d-1cc7-45c9-8d45-c6cdf78b6bbe/: index_metadata.pickle
prompts/: Archivist.md  Consistency_Checker.md  Dialogue_Specialist.md  EDITOR.md  Humanizer-zh.md  Pacing_Advisor.md  Planner.md  World_Builder.md  Writer.md
src/: cli.py  config.py  exceptions.py  main.py  novel_types.py
src/agents/: archivist.py  archivist.py.bak  base.py  consistency_checker.py  dialogue_specialist.py  editor.py  humanizer.py  pacing_advisor.py  planner.py  world_builder.py  writer.py
src/api/: server.py  types.py
src/communication/: autogen_wrapper.py  message.py  protocol.py
src/core/: agent_factory.py  engine.py  knowledge_base.py  knowledge_base_minimal.py  prompt_manager.py  story_state.py  workflow.py
src/frontend/: .gitignore  index.html  package-lock.json  package.json
src/frontend/src/: App.css  App.jsx
src/frontend/src/api/: client.js  websocket.js
src/frontend/src/components/: StoryWorkspace.jsx
src/interface/: __init__.py  components.py  gradio_app.py  utils.py
src/knowledge/: base.py  chroma_db.py  llamaindex_db.py  schema.py  store.py
src/llm/: __init__.py  embeddings.py  providers.py
src/ui/: gradio_app.py
src/workflow/: config.py  constants.py  edges.py  graph.py  nodes.py  phase_manager.py  state.py  types.py
storage/: chroma.sqlite3
tests/: test_agents.py  test_basic_integration.py  test_integration.py  test_integration_llm.py  test_knowledge.py  test_prompt_manager.py  test_workflow.py
