[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "write-agent"
version = "0.1.0"
description = "AI Collaborative Novel Writing System"
readme = "README.md"
authors = [{name = "if-water", email = "if-water@example.com"}]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11"
]
dependencies = [
    "pyautogen>=0.2.0",
    "langgraph>=0.0.48",
    "langchain-core>=0.1.0",
    "openai>=1.0.0",
    "anthropic>=0.5.0",
    "llamaindex>=0.10.0",
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "gradio>=4.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "tiktoken>=0.5.0",
    "rich>=13.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0"
]

[project.urls]
Homepage = "https://github.com/if-water/writeAgent"
Repository = "https://github.com/if-water/writeAgent"

[tool.setuptools.packages.find]
where = ["src"]